crates/dreamd-cli/tests/snapshots/cli_help__memory_branch_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "nested_subcommand_help(\"memory\", \"branch\")"
---
Snapshot the live memory files, name the snapshot <NAME>, and make it current.

Fails if the branch already exists. Prints the object id.

Usage: branch <NAME>

Arguments:
  <NAME>
          Branch name: [a-z0-9][a-z0-9._-]{0,63}, no `..`

Options:
  -h, --help
          Print help (see a summary with '-h')
