crates/dreamd-cli/tests/snapshots/cli_help__memory_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"memory\")"
---
Name memory snapshots as branches and check them out (BZR-150).

Refs live under .agent/.dreamd/branches/. Checkout replaces the live memory files and refuses while `dreamd watch` is running.

Usage: memory <COMMAND>

Commands:
  branch    Snapshot the live memory files, name the snapshot <NAME>, and make it current
  checkout  Replace the live memory files with branch <NAME> and make it current
  branches  List branches; `*` marks the current one
  delete    Delete branch <NAME>. The snapshot object stays on disk
  bisect    Binary-search the snap-* timeline for the first bad snapshot (BZR-153)
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
