crates/dreamd-cli/tests/snapshots/cli_help__migrate_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"migrate\")"
---
Migrate episodic schema versions. The only path is 1.0.0 to 1.0.0, a no-op

Usage: migrate --from <FROM> --to <TO>

Options:
      --from <FROM>
          Source episodic record schema version (e.g. `1.0.0`)

      --to <TO>
          Target episodic record schema version (e.g. `1.0.0`)

  -h, --help
          Print help
