crates/dreamd-cli/tests/snapshots/cli_help__recall_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"recall\")"
---
Search stored memories by query, ranked by relevance and importance (markdown table)

Usage: recall [OPTIONS] <QUERY>

Arguments:
  <QUERY>
          Free-text query (BM25 over episodic content)

Options:
  -k, --k <K>
          Max results (default 10 — CLI demo default; HTTP/MCP stay at 5)
          
          [default: 10]

      --explain
          Print per-hit salience factor breakdown (DR-204)

      --without <WITHOUT>
          Drop these event ids before top-k. Repeatable. Does not modify the index

      --without-cluster <WITHOUT_CLUSTER>
          Drop hits whose skill_action equals this prefix or extends it with `::`

  -h, --help
          Print help
