crates/dreamd-cli/tests/snapshots/cli_help__reset_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"reset\")"
---
Reset scratch state. Today only `workspace` is supported

Usage: reset <COMMAND>

Commands:
  workspace  Clear working/WORKSPACE.md back to its initial scaffold contents
  help       Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
